chore : 테이블 리팩터링